# BensPaperTradingBot

./: .cursorrules  .env.example  .gitignore  AI_ORCHESTRATOR_README.md  AUTONOMOUS_TRADING_READY.md  BUSINESS_PRESENTATION.md  BUYER_PROOF_METRICS.md  BenBot_Complete_Launcher.app.command  BenBot_Complete_Launcher.sh  BenBot_Enhanced_Launcher.app.command  BenBot_Enhanced_Launcher.sh  BenBot_Fixed_Launcher.sh  BenBot_Launcher.applescript  BenBot_Launcher_Fixed.app.command  BenBot_Minimal_Launcher.applescript  BenBot_Production.command  BenBot_Production_Launcher.applescript  BenBot_Production_Launcher.sh  BenBot_Simple_Dashboard.app.command  CLEANUP_PLAN.md  COMPLETE_SYSTEM_SUMMARY.md  COMPLETE_TRADING_BOT_ANALYSIS.md  COMPLETE_UI_DATA_AUDIT.md  CURRENT_PROCESS_SUMMARY.md  Create_Streamlit_Shortcut.applescript  DAILY_CHECK_COMMANDS.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.ui  EVIDENCE_REPORT.md  EVOLUTION_INTEGRATION.md  EVOLUTION_STATUS.md  EXECUTIVE_OVERVIEW.md  EXISTING_FEATURES.md  FEATURES_IMPLEMENTATION_STATUS.md  FEATURE_IMPLEMENTATION_GUIDE.md  FEATURE_STATUS.md  FERRARI_MODE_ACTIVATED.md  FINAL_UI_AUDIT_COMPLETE.md  FIX_NEWS_AND_EVOLUTION.md  (+164 more)
Trading:BenBot/: pyproject.toml  trading_dashboard_api.py
trading_bot_BACKUP_20250912/: README_butterfly.md  __init__.py  advanced_integration.json  backend_service.py  config.yaml  config_manager.py  core_strategies.yaml  flask_app.py  initialize_trade_journal.py  market_intelligence_controller.py  news_sources.yaml  notification_manager.py  option_strategy_risk_manager.py  options_risk_manager.py  portfolio_state.py  position_sizer.py  psychological_risk.py  pyproject.toml  requirements.txt  run_tests.py  strategy_manager.py  trade_journal.py  tradier_client.py  trading_daemon.py  trading_optimizers.py  update_seasonality_insights.py  webhook_receiver.py
trading_bot_BACKUP_20250912/accounting/: pnl_calculator.py
trading_bot_BACKUP_20250912/accounts/: account_data.py
trading_bot_BACKUP_20250912/adapters/: health.py
trading_bot_BACKUP_20250912/ai_analysis/: ai_trading_orchestrator.py
trading_bot_BACKUP_20250912/ai_scoring/: integrated_rotator.py  market_regime.py  performance_adjuster.py  snowball_allocator.py  trade_evaluation_notifier.py
trading_bot_BACKUP_20250912/alerts/: telegram_alerts.py
trading_bot_BACKUP_20250912/analysis/: daily_trade_review.py  market_regime_detector.py  pattern_recognition.py  trade_analyzer.py
trading_bot_BACKUP_20250912/analytics/: journal_integration.py  performance_tracker.py
trading_bot_BACKUP_20250912/api/: __init__.py  ai_assistant.py  app_new.py  backtest_endpoints.py  data_ingestion_endpoints.py  orchestrator_context_endpoints.py  simple_app.py  start_api.sh  start_api_new.sh  start_trading_api.sh  strategy_approval_endpoints.py  strategy_endpoints.py  websocket_endpoint.py  websocket_manager.py
trading_bot_BACKUP_20250912/assistant/: benbot_assistant.py
trading_bot_BACKUP_20250912/auth/: __init__.py  models.py
trading_bot_BACKUP_20250912/autonomous/: ab_testing_integration.py  ab_testing_manager.py  ai_bot_competition.py  approval_workflow.py  autonomous_engine.py  bayesian_optimization_integration.py  optimization_jobs.py  strategy_lifecycle_integration.py  synthetic_market_generator.py  synthetic_testing_integration.py  (+1 more)
(+3012 files in other folders)
