[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trading_bot"
version = "0.1.0"
description = "Automated trading bot with AI capabilities"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "yfinance",
    "pandas",
    "requests",
    "flask-cors>=6.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["trading_bot"] 